phone top section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="index.css">
   
   <title>Frontend Mentor | [Challenge Name Here]</title>
 
@@ -14,8 +15,47 @@
 
 </head>
 <body>
+  <main>
+    <section class="container">
+      <div class="phone">
+        <div class="inner">
+          <div class="top">
+            <div class="notch"></div>
+            <div class="inner-top">
+              <div class="top-left">
+                <img src="/images/avatar.jpg" alt="Samuel green pfp">
+                <div class="name">
+                  <h3>Samuel Green</h3>
+                  <p>Available to Walk</p>
+                </div>
+              </div>
+              <div class="top-right">
+                <ul>
+                  <li></li>
+                  <li></li>
+                  <li></li>
+                </ul>
+              </div>
+            </div>
+          </div>
 
-  Samuel Green
+
+        </div>
+      </div>
+      <div class="texts">
+        <h1>
+          Simple booking
+        </h1>
+        <p>
+          Stay in touch with our dog walkers through the chat interface. This makes it easy to 
+          discuss arrangements and make bookings. Once the walk has been completed you can rate 
+          your walker and book again all through the chat.
+        </p>
+      </div>
+    </section>
+  </main>
+
+  <!-- Samuel Green
   Available to Walk
 
   That sounds great. I’d be happy with that.
@@ -40,7 +80,7 @@
 
   Stay in touch with our dog walkers through the chat interface. This makes it easy to 
   discuss arrangements and make bookings. Once the walk has been completed you can rate 
-  your walker and book again all through the chat.
+  your walker and book again all through the chat. -->
   
 </body>
 </html>
