chat area messages

--- a/index.html
+++ b/index.html
@@ -38,8 +38,35 @@
               </div>
             </div>
           </div>
-
-
+          <div class="chat-area">
+            <div class="message mine">
+              <p>That sounds great. I’d be happy with that.</p>
+            </div>
+            <div class="message">
+              <p>Could you send over some pictures of your dog, please?</p>
+            </div>
+            <div class="images-message">
+              <img src="/images/dog-image-1.jpg" alt="Dog looking up">
+              <img src="/images/dog-image-2.jpg" alt="Dog looking at camera">
+              <img src="/images/dog-image-3.jpg" alt="Dog fetching a stick">
+            </div>
+            <div class="message other">
+              <p>
+                Here are a few pictures. She's a happy girl!
+              </p>
+            </div>
+            <div class="message other">
+              <p>
+                Can you make it?
+              </p>
+            </div>
+            <div class="message mine">
+              <p>
+                She looks so happy! The time we discussed works. How long shall I take her out for?
+              </p>
+            </div>
+            
+          </div>
         </div>
       </div>
       <div class="texts">
