chat options and input field

--- a/index.html
+++ b/index.html
@@ -65,7 +65,28 @@
                 She looks so happy! The time we discussed works. How long shall I take her out for?
               </p>
             </div>
-            
+            <div class="options">
+              <div class="option">
+                <div class="time">
+                  <span class="radio"></span>
+                  <p>30 minute walk</p>
+                </div>
+                <p class="price">$29</p>
+              </div>
+              <div class="option">
+                <div class="time">
+                  <span class="radio"></span>
+                  <p>1 hour walk</p>
+                </div>
+                <p class="price">$49</p>
+              </div>
+            </div>
+            <div class="input-container">
+              <input type="text" placeholder="Type a message...">
+              <button>
+                >
+              </button>
+            </div>
           </div>
         </div>
       </div>
