desktop design with extra background shape

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
-
 </head>
 <body>
   <main>
     <div class="background-shape"></div>
+    <div class="light-background-shape"></div>
     <section class="container">
       <div class="phone">
         <div class="inner">
